manifests/simple-crud-app-react-nodejs-backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: simple-crud-app-react-nodejs-backend
  name: simple-crud-app-react-nodejs-backend
