manifests/simple-crud-app-react-nodejs-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-crud-app-react-nodejs-backend
  namespace: simple-crud-app-react-nodejs-backend
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port:   '3333'
spec:
  selector: 
    app: simple-crud-app-react-nodejs-backend
  type: ClusterIP  
  ports:
    - port: 3333
      targetPort: 3333
